# UniverSegExt

./: .gitignore  CMakeLists.txt  README.md  preprocessing.py
UniverSeg/: CMakeLists.txt  SegmentEditorUniverSeg.py
UniverSeg/SegmentEditorUniverSegLib/: SegmentEditorEffect.py  __init__.py  wbc.py
UniverSegEditor/: CMakeLists.txt  SegmentEditorUniverSegEditor.py
UniverSegEditor/SegmentEditorUniverSegEditorLib/: SegmentEditorEffect.py  SegmentEditorEffectTemp.py
